Додавання і зміна контактної інформації з форми в БД